set(GAMEFW_CONVENIENCE_SRCS defaultfirstpersoncontroller.cpp defaultfirstpersongamestate.cpp simplegameworld.cpp)
set(GAMEFW_CONVENIENCE_HDRS defaultfirstpersoncontroller.h defaultfirstpersongamestate.h simplegameworld.h)
add_library(gamefw_convenience ${GAMEFW_CONVENIENCE_HDRS}
    ${GAMEFW_CONVENIENCE_SRCS})
target_link_libraries(gamefw_convenience gamefw)